week2/parkcoool/index.css
html,
body {
    margin: 0;
    padding: 0;
}

.header {
    display: flex;
    padding: 12px 16px;
    justify-content: space-between;
    align-items: center;
    position: sticky;
    top: 0;
    width: 100%;
    box-sizing: border-box;
    background: #fff;
}

.btn-container {
    display: flex;
    align-items: center;
    gap: 16px;
}

.img-btn {
    border: none;
    background: none;
    cursor: pointer;
    margin: 0;
    padding: 0;
    width: 24px;
    height: 24px;
}

.img-txt-btn {
    display: flex;
    align-items: center;
    gap: 4px;
    border: none;
    background: none;
    cursor: pointer;
    margin: 0;
    padding: 0;
    color: #5e5e5e;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
}

.region {
    color: #000;
    font-family: Inter;
    font-size: 18px;
    font-weight: 700;
    display: flex;
    align-items: center;
}

.tag-container {
    display: flex;
    align-items: center;
    gap: 8px;
    padding: 12px 16px;
    width: 100%;
    box-sizing: border-box;
    overflow-x: auto;
}

.tag-container > .tag {
    background: none;
    cursor: pointer;
    margin: 0;
    padding: 8px 12px;
    border-radius: 100px;
    border: 1px solid #eee;
    white-space: nowrap;
}

.ad {
    display: flex;
    align-items: center;
    padding: 12px 16px;
    gap: 8px;
    cursor: pointer;
}

.ad > .ad-message {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.ad > .ad-message > h1 {
    font-family: Inter;
    font-size: 15px;
    font-weight: 700;
    margin: 0;
}

.ad > .ad-message > h2 {
    color: #5e5e5e;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    margin: 0;
}

.article-body {
    padding: 16px;
    display: flex;
    flex-direction: column;
    border-top: 4px solid #eee;
    gap: 12px;
}

.article-body > .tag {
    display: flex;
    padding: 3px 6px;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    background: #eee;
    width: fit-content;
    font-family: Inter;
    font-size: 10px;
    font-weight: 400;
    line-height: 18px;
}

.article-body > .thumbnail {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.article-body > .thumbnail > h1 {
    font-family: Inter;
    font-size: 14px;
    font-weight: 400;
    line-height: 18px;
    margin: 0;
}

.article-body > .thumbnail > h1 > span {
    margin-right: 4px;
    color: #ff7e36;
    font-family: Inter;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 18px;
}

.article-body > .thumbnail > h2 {
    color: #8c8c8c;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    line-height: 18px;
    margin: 0;
}

.article-body > .thumbnail > .detail {
    color: #868686;
    font-family: Inter;
    font-size: 12px;
    font-weight: 700;
    line-height: 18px;
    cursor: pointer;
    text-decoration: none;
}

.article-body > .picture-container {
    display: flex;
    gap: 2px;
    width: 100%;
    height: 180px;
    border-radius: 4px;
    overflow-x: auto;
}

.article-body > .des-container {
    display: flex;
    flex-direction: column;
    justify-self: center;
    gap: 4px;
}

.des {
    display: flex;
    align-items: center;
    gap: 4px;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
}

.article-body > .location {
    display: flex;
    height: 48px;
    border-radius: 4px;
    border: 1px solid #d9d9d9;
    background: #fff;
}

.article-body > .location > .location-icon {
    position: relative;
    height: 100%;
    aspect-ratio: 1;
    overflow: hidden;
    display: flex;
}

.article-body > .location > .location-icon > img {
    z-index: 1;
    position: absolute;
    top: calc(50% - 12px);
    left: calc(50% - 12px);
}

.article-body > .location > .location-icon > div {
    transform: rotate(-16.3deg);
    display: grid;
    grid-template-columns: 33px 33px;
    grid-template-rows: 33px 33px;
    gap: 2.71px;
    align-self: center;
    justify-self: center;
}

.article-body > .location > .location-icon .rectangle {
    width: 33px;
    height: 33px;
    background: #f6f6f6;
}

.article-body > .location > .location-des {
    width: 100%;
    padding: 8px 12px;
    box-sizing: border-box;
    overflow: hidden;
}

.article-body > .location > .location-des > h1 {
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    margin: 0;
}

.article-body > .location > .location-des > h2 {
    color: #8c8c8c;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: break-all;
    white-space: nowrap;
}

.article-body > .info {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: #8c8c8c;
    font-family: Inter;
    font-size: 12px;
    font-weight: 400;
    line-height: 18px;
}

.article-body > .info > .author {
    display: flex;
    gap: 4px;
}

.article-footer {
    display: flex;
    padding: 10px 16px;
    align-items: center;
    gap: 16px;
    border-top: 1px solid #eee;
}

.bottom-bar {
    position: sticky;
    bottom: 0;
    width: 100%;
    bottom: 0;
    display: flex;
    padding: 8px 0;
    background: #fff;
}

.bottom-bar > .nav-item {
    width: 100%;
    padding: 0;
    border: none;
    background: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4px;
    flex: 1 0 0;
    font-family: Inter;
    font-size: 10px;
    font-weight: 400;
    line-height: 14px;
}

